--- a/fusen.html
+++ b/fusen.html
@@ -12,7 +12,7 @@
 <body>
     <div class="introduction">
         インターネットの付箋<br>
-        <p style="font-size: 0.6em;">インターネットの付箋は、付箋を付されたインターネットの切れ端たちです。</p>
+        <p style="font-size: 0.6em;">インターネットの付箋は、付箋を貼られたインターネットの短い切れ端たちです。</p>
     </div>
     <div>
         <div class="output-box">
