--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="images/favicon.ico">
-    <title>Top - kkofu.github.io</title>
+    <title>kkofu</title>
 </head>
 <body>
     <header>
