--- a/contents.html
+++ b/contents.html
@@ -15,8 +15,8 @@
     </header>
     <main>
         <ul class="top-bullet">
-            <li><a href="random-internet.html">Random Access Internet</a></li>
-            <li><a href="fomula.html">fomula</a> by <a href="https://openprocessing.org/user/335085" style="color: #1a878e;">melonade</a>
+            <li><a href="random-internet">Random Access Internet</a></li>
+            <li><a href="fomula">fomula</a> by <a href="https://openprocessing.org/user/335085" style="color: #1a878e;">melonade</a>
                 <ul class="ul-sec">
                     <li>edit this background yourself!</li>
                 </ul>
