--- a/fusen.html
+++ b/fusen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
+    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg"/>
     <link rel="stylesheet" href="assets/fusen.css">
     <link rel="icon" href="images/favicon.ico">
     <title>インターネットの付箋</title>
