--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="This is a web page.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
+    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg"/>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="images/favicon.ico">
     <title>kkofu</title>
@@ -31,7 +31,7 @@
             </ul>
             <h3  style="padding-top: 350px;">Banner</h3>
             <a href="https://kkofu.github.io" class="link-img"><img 
-                src="images/banner.png" style="border: .75px solid white;" 
+                src="images/banner.jpg" style="border: .75px solid white;" 
                 width="200px" height=auto alt="kkofu"></a> link free!
                 <details style="border: .5px solid #444">
                     <summary>source</summary>
