--- a/fomula.html
+++ b/fomula.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
+    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg"/>
 	<script src="https://openprocessing.org/openprocessing_sketch.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/p5.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/addons/p5.sound.min.js"></script>
