--- a/profile.html
+++ b/profile.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="preload" as="fetch" href="images/selfie.JPEG">
     <meta charset="UTF-8">
     <meta name="description" content="kofu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.png" />
+    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg"/>
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="images/favicon.ico">
     <title>Profile</title>
@@ -13,7 +12,7 @@
 <body>
     <div class="window">
         <h1 style="font-size: 3.5em; text-align: center;">kofu</h1>
-        <img src="images/selfie.JPEG" width="100%" title="Photo of Author" alt="">
+        <img src="images/selfie.jpg" width="100%" title="Photo of Author" alt="">
     </div>
     <footer>
         <h4><a href="./">kkofu</a> &copy; 2024~</h4>
