--- a/yon.html
+++ b/yon.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Redirecting...</title>
-</head>
-<body>
-	<script type="text/javascript">
-	window.location.replace('https://www.youtube.com/watch?v=KLBZ5s8w6lw');
-	</script>
-</body>
-</html>
+<script>window.location.replace('https://www.youtube.com/watch?v=KLBZ5s8w6lw')</script>
