--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="This is a web page.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg"/>
+    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="icon" href="images/favicon.ico">
     <title>kkofu</title>
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1 style="font-size: 3.5em;">This is a web page.</h1>
-        <a href="yon" class="header-small" onclick="window.open(this.href); return false;">Hello, Internet!</a>
+        <a href="yon" class="header-small">Hello, Internet!</a>
     </header>
     <main>
         <div>
