--- a/yon.html
+++ b/yon.html
@@ -1,1 +1,13 @@
-<script>window.location.replace('https://www.youtube.com/watch?v=KLBZ5s8w6lw')</script>
+<html>
+    <head>
+        <title>４！</title>
+        <meta http-equiv="refresh" content="2;URL='https://www.youtube.com/watch?v=KLBZ5s8w6lw'">
+        <style>
+            html, body {height: 100%;}
+            body {background-color: black; display: grid; place-items: center;}
+            img {height: 50%;}
+        </style>
+    </head>
+    <body>
+        <img src="images/yon.jpg"></img>
+    </body>
