--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <header>
         <h1 style="font-size: 3.5em;">This is a web page.</h1>
-        <a href="yon" class="header-small">Hello, Internet!</a>
+        <a href="pages/yon" class="header-small">Hello, Internet!</a>
     </header>
     <main>
         <div>
             <ul class="top-bullet">
-                <li><a href="about">About</a></li>
-                <li><a href="contents">Contents</a></li>
-                <li><a href="profile">Profile</a></li>
+                <li><a href="pages/about">About</a></li>
+                <li><a href="pages/contents">Contents</a></li>
+                <li><a href="pages/profile">Profile</a></li>
                 <li>Links
                     <ul class="ul-sec">
                         <li><a href="https://scrapbox.io/kofu-lab/" onclick="window.open(this.href); return false;" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
