--- a/pages/contents.html
+++ b/pages/contents.html
@@ -5,8 +5,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="icon" href="../images/favicon.ico">
     <title>Contents</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
             </li>
         </ul>
     <footer>
-        <h4><a href="./">kkofu</a> &copy; 2024~</h4>
+        <h4><a href="../">kkofu</a> &copy; 2024~</h4>
     </footer>
 </body>
 </html>
