--- a/pages/fomula.html
+++ b/pages/fomula.html
@@ -2,16 +2,21 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg">
 	<script src="https://openprocessing.org/openprocessing_sketch.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/p5.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.10.0/lib/addons/p5.sound.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.4/dist/tweakpane.min.js"></script>
-    <link rel="stylesheet" href="assets/fomula.css">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="../images/favicon.ico">
     <title>fomula</title>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			overflow-y: hidden;
+			background-color: black;
+		}
+	</style>
 </head>
 <body>
     <main>
@@ -201,8 +206,5 @@ function draw() {
 }
         </script>
     </main>
-    <footer>
-        <h4><a href="./">kkofu</a> &copy; 2024~</h4>
-    </footer>
 </body>
 </html>
