--- a/pages/profile.html
+++ b/pages/profile.html
@@ -5,17 +5,17 @@
     <meta name="description" content="kofu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="icon" href="../images/favicon.ico">
     <title>Profile</title>
 </head>
 <body>
     <div class="window">
         <h1 style="font-size: 3.5em; text-align: center;">kofu</h1>
-        <img src="images/selfie.jpg" width="100%" title="Photo of Author" alt="">
+        <img src="../images/selfie.jpg" width="100%" title="Photo of Author" alt="">
     </div>
     <footer>
-        <h4><a href="./">kkofu</a> &copy; 2024~</h4>
+        <h4><a href="../">kkofu</a> &copy; 2024~</h4>
     </footer>
 </body>
 </html>
