--- a/pages/random-internet.html
+++ b/pages/random-internet.html
@@ -5,8 +5,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="icon" href="../images/favicon.ico">
     <title>Random Access Internet</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
         </ul>
     </main>
     <footer>
-        <h4><a href="./">kkofu</a> &copy; 2024~</h4>
+        <h4><a href="../">kkofu</a> &copy; 2024~</h4>
     </footer>
 </body>
 </html>
