Fix: link (hello)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1 style="font-size: 3.5em;">This is a web page.</h1>
-        <a href="pages/yon" class="header-small">Hello, Internet!</a>
+        <a href="pages/hello" class="header-small">Hello, Internet!</a>
     </header>
     <main>
         <div>
