--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <div>
             <ul class="top-bullet">
-                <li><a href="pages/about">About</a></li>
+                <li><a href="about">About</a></li>
                 <li><a href="pages/contents">Contents</a></li>
                 <li><a href="pages/profile">Profile</a></li>
                 <li>Links
