--- a/404.html
+++ b/404.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="https://kkofu.github.io/assets/style.css">
+    <link rel="icon" href="https://kkofu.github.io/images/favicon.ico">
     <title>Page not found</title>
 </head>
 <body>
-    <div style="text-align: center; background-color: #0000FF; margin: 100px; padding:100px 100px 50px;"><br><br>
-        <a style="font-size: 8em">404</a><br><br><br><br>
+    <div style="text-align: center; background-color: #0000FF; margin: 100px; padding:100px 100px 50px;">
+        <div style="margin: 2em;"></div>
+        <a style="font-size: 8em;">404</a>
+        <div style="margin: 3em;"></div>
         <a href="./"><li class="button">TOP</li></a>
     </div>
     <div style="position: fixed; bottom: 0; left: 1.5%;"">
-        <a href="assets/bin.txt"><image src="images/404.png" width="30%"></image></a>
+        <a href="https://kkofu.github.io/assets/bin.txt"><image src="https://kkofu.github.io/images/404.png" width="30%"></image></a>
     </div>
     <footer>
         <h4><a href="./">kkofu</a> &copy; 2024~</h4>
