--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
                 <li><a href="pages/profile">Profile</a></li>
                 <li>Links
                     <ul class="ul-sec">
-                        <li><a href="https://scrapbox.io/kofu-lab/" onclick="window.open(this.href); return false;" style="background-color: #00b42e; color: white">scrapbox</a></li><br>
-                        <li><a href="https://kiite.jp/playlist/DwDZeKDkj0" style="background-color: darkslategray; color: white;">kiite</a></li><br>
+                        <li><a href="https://scrapbox.io/kofu-lab/" onclick="window.open(this.href); return false;" style="background-color: #00b42e; color: #ffffff">scrapbox</a></li><br>
+                        <li><a href="https://kiite.jp/playlist/DwDZeKDkj0" style="background-color: #474747; color: #ffffff;">kiite</a></li><br>
                         <li><a href="https://discord.com/users/1008287185277034597" style="background-color: #5562f6; color: white">Discord</a></li><br>
-                        <li><a href="https://nostter.app/kkofu@kkofu.github.io" style="background-color: #16202a; color: #71c9f7;">nostr</a></li>
+                        <li><a href="https://nostter.app/kkofu@kkofu.github.io" style="background-color: #16202a; color: #71c9f7;">nostr</a></li><br>
+                        <li><a href="https://bsky.app/profile/kkofu.github.io" style="background-color: #ffffff; color: #0886fe;">Bluesky</a></li>
                     </ul>
                 </li>
             </ul>
-            <h3  style="padding-top: 350px;">Banner</h3>
+            <h3  style="padding-top: 200px;">Banner</h3>
             <a href="https://kkofu.github.io" class="link-img"><img 
                 src="images/banner.jpg" style="border: .75px solid white;" 
                 width="200px" height=auto alt="kkofu"></a> link free!
