--- a/pages/contents.html
+++ b/pages/contents.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <ul class="top-bullet">
-            <li><a href="fusen"></a>インターネットの付箋</li>
+            <li><a href="fusen">Internet stickey notes/a></li>
             <li><a href="random-internet">Random Access Internet</a></li>
             <li><a href="fomula">fomula</a> by <a href="https://openprocessing.org/user/335085" style="color: #1a878e;">melonade</a>
                 <ul class="ul-sec">
