--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="This is a web page.">
@@ -29,10 +29,11 @@
                     </ul>
                 </li>
             </ul>
-            <h3  style="padding-top: 200px;">Banner</h3>
+            <h3 style="padding-top:10em;">Banner</h3>
             <a href="https://kkofu.github.io" class="link-img"><img 
-                src="images/banner.jpg" style="border: .75px solid white;" 
-                width="200px" height=auto alt="kkofu"></a> link free!
+                src="images/banner.jpg"
+                style="border:.75px solid white; width:200px; height:auto;"
+                alt="kkofu"></a>link free!
                 <details style="border: .5px solid #444">
                     <summary>source</summary>
                     <code>
@@ -43,10 +44,15 @@
             <h3>Links(One-way)</h3>
             <a href="https://ideoaves.github.io/" class="link-img"><img 
                 src="https://ideoaves.github.io/banner.png" 
-                width="200px" height="40px" alt="Ideoaves"></a>
+                style="width:200px; height:40px;"
+                alt="Ideoaves">
+            </a>
             <a href="https://www.suzumenome.com"><img 
                 src="https://www.suzumenome.com/mutual-links/banners/szmnm-banner02.png" 
-                width=auto height="40px" border="0" alt="すずめのめオフィシャルWEB バナー"></a>
+                style="width:auto; height:40px; border:none;"
+                alt="すずめのめオフィシャルWEB バナー">
+            </a>
+            <h3 class="about"><a href="https://scrapbox.io/kofu-lab/kkofu.github.io">about</a></h3>
         </div>
     </main>
     <footer>
