Fix: font-loading

--- a/pages/contents.html
+++ b/pages/contents.html
@@ -7,6 +7,9 @@
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg">
     <link rel="stylesheet" href="../assets/style.css">
     <link rel="icon" href="../images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
     <title>Contents</title>
 </head>
 <body>
@@ -15,13 +18,13 @@
     </header>
     <main>
         <ul class="top-bullet">
-            <li><a href="fusen">Internet stickey notes</a></li>
-            <li><a href="random-internet">Random Access Internet</a></li>
             <li><a href="fomula">fomula</a> by <a href="https://openprocessing.org/user/335085" style="color: #1a878e;">melonade</a>
                 <ul class="ul-sec">
                     <li>edit this background yourself!</li>
                 </ul>
             </li>
+            <li><a href="fusen">Internet stickey notes</a></li>
+            <li><a href="random-internet">Random Access Internet</a></li>
         </ul>
     <footer>
         <h4><a href="../">kkofu</a> &copy; 2024~</h4>
