--- a/pages/random-internet.html
+++ b/pages/random-internet.html
@@ -7,6 +7,9 @@
     <meta name="twitter:image" content="https://kkofu.github.io/images/bg.jpg">
     <link rel="stylesheet" href="../assets/style.css">
     <link rel="icon" href="../images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
     <title>Random Access Internet</title>
 </head>
 <body>
