Add: scrapbox link

--- a/pages/contents.html
+++ b/pages/contents.html
@@ -25,6 +25,7 @@
             </li>
             <li><a href="fusen">Internet stickey notes</a></li>
             <li><a href="random-internet">Random Access Internet</a></li>
+            <li><a href="https://scrapbox.io/gdpass-onkan/" style="font-size:smaller;">藝大入試論考 音楽環境創造科</a></li>
         </ul>
     <footer>
         <h4><a href="../">kkofu</a> &copy; 2024~</h4>
