Update: contents.html

--- a/pages/contents.html
+++ b/pages/contents.html
@@ -25,7 +25,7 @@
             </li>
             <li><a href="fusen">Internet stickey notes</a></li>
             <li><a href="random-internet">Random Access Internet</a></li>
-            <li><a href="../articles" style="color:red;">articles</a></li>
+            <li><a href="../articles" style="color:#dadde0;">articles</a></li>
         </ul>
     <footer>
         <h4><a href="../">kkofu</a> &copy; 2024~</h4>
