Update: fusen.html

--- a/pages/fusen.html
+++ b/pages/fusen.html
@@ -39,7 +39,7 @@
         }
     </script>
     <footer>
-        <h4><a href="../">kkofu</a> &copy; 2024~</h4>
+        <h4><a style="color: #444" href="../">kkofu</a></h4>
     </footer>
 </body>
 </html>
