Update: fusen.html

--- a/pages/fusen.html
+++ b/pages/fusen.html
@@ -10,11 +10,15 @@
 </head>
 <body>
     <div class="introduction">
-        インターネットの付箋<br>
+        <p>
+            インターネットの付箋
+            <span style="margin-left: 0.5em; cursor: pointer;" class='refresh' onclick='refresh()'>↺</span>
+        </p>
         <div style="font-size: 0.6em;">
-            <p>インターネットの付箋は、付箋を貼られたインターネットの短い切れ端たちです。<br>
-            <a style="font-size: 1.1em;" href="https://ideoaves.github.io/words">https://ideoaves.github.io/words</a>の<a style="font-size: 1.1em;" href="https://github.com/ideoaves/ideoaves.github.io/tree/main/words.html">ソースコード</a>をお借りしています。
-            <div;" style="font-size: 1.1em;" class='refresh' onclick='refresh()'>↺</div></p>
+            <p>
+                インターネットの付箋は、付箋を貼られたインターネットの短い切れ端たちです。<br>
+                <a style="font-size: 1.1em;" href="https://ideoaves.github.io/Internet_aquarium/">ideoaves.github.io/Internet_aquarium</a> の <a style="font-weight: bold;" href="https://github.com/ideoaves/ideoaves.github.io/blob/main/Internet_aquarium/index.html">ソースコード</a>をお借りしています。
+            </p>
         </div>
     </div>
     <div class="output-box">
