Nvm I figured it out

--- a/404.html
+++ b/404.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://kkofu.github.io/assets/style.css">
-    <link rel="icon" href="https://kkofu.github.io/images/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="https://kkofu.github.io/images/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
     <title>Page not found</title>
 </head>
@@ -21,7 +19,7 @@
         <a href="https://kkofu.github.io/assets/bin.txt"><image src="https://kkofu.github.io/images/404.png" width="30%"></image></a>
     </div>
     <footer>
-        <h4><a href="./">kkofu</a> &copy; 2024~</h4>
+        <h4><a href="./">kkofu</a> 2024~</h4>
     </footer>
 </body>
 </html>
