--- a/pages/fusen.html
+++ b/pages/fusen.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/fusen.css">
-    <link rel="icon" href="../images/favicon.ico">
+    <link rel="icon" href="../images/favicon.png">
     <title>インターネットの付箋</title>
 </head>
 <body>
@@ -42,8 +42,5 @@
             window.location.reload(true);
         }
     </script>
-    <footer>
-        <h4><a style="color: #444" href="../">kkofu</a></h4>
-    </footer>
 </body>
 </html>
