--- a/pages/fusen.html
+++ b/pages/fusen.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/fusen.css">
     <link rel="icon" href="../images/favicon.png">
-    <title>インターネットの付箋</title>
+    <title>Internet stickey notes</title>
 </head>
 <body>
     <div class="introduction">
@@ -16,8 +16,8 @@
         </p>
         <div style="font-size: 0.6em;">
             <p>
-                インターネットの付箋は、付箋を貼られたインターネットの短い切れ端たちです。<br>
-                <a style="font-size: 1.1em;" href="https://ideoaves.github.io/Internet_aquarium/">ideoaves.github.io/Internet_aquarium</a> の <a style="font-weight: bold;" href="https://github.com/ideoaves/ideoaves.github.io/blob/main/Internet_aquarium/index.html">ソースコード</a>をお借りしています。
+                インターネット、もしくはインターネット外の短い言葉の切れ端たちです。<br>
+                <a style="font-size: 1.1em;" href="https://ideoaves.github.io/Internet_aquarium/">ideoaves.github.io/Internet_aquarium</a> のフォーク。
             </p>
         </div>
     </div>
